# cmake_vanilla_template

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  app.cpp
letters/: CMakeLists.txt  letters.cpp  letters.h
nums/: CMakeLists.txt  nums.cpp  nums.h
scripts/: InstallBoostCustom.cmake
shape/: CMakeLists.txt  shape.hpp
tests/: CMakeLists.txt  test.cpp
